--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,5 +22,5 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: exilemirror/backstage-python-app:${GITHUB_SHA::6}
+          tags: exilemirror/backstage-python-app:${{ github.sha }}
 
