--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
+        name: Shorten commit id
+        shell: bash
+        run: |
+          echo "COMMIT_ID=${GITHUB_SHA::6}" >> "$GITHUB_ENV"
+      -
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -22,5 +27,5 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: exilemirror/backstage-python-app:${{ github.sha }}
+          tags: exilemirror/backstage-python-app:${{ env.COMMIT_ID }}
 
