--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -33,8 +33,14 @@ jobs:
     needs: ci
     runs-on: self-hosted
     steps:
-      -
-        name: Argo cd sync
+      - name: Install argocd
+        shell: bash
+        run: |
+          curl -ksSL -o argocd-linux-amd64 https://argocd-server.argocd/download/argocd-linux-amd64
+          chmod +x argocd
+          mv ./argocd /usr/local/bin/argocd
+
+      - name: Argo cd sync
         shell: bash
         run: |
           argocd login argocd-server.argocd \
